[package]
name = "rust-code-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21.0"
egui = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8"

[dependencies.windows]
version = "0.42"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[[bin]]
name = "rust_viewer"
path = "src/main.rs"
