[package]
name = "rust_code_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21"
egui = "0.21"
syn = { version = "2.0", features = ["full", "parsing"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
