[package]
name = "rust_code_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.21"
egui = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[[bin]]
name = "rust_code_visualizer"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
strip = true
